Fix scaled hovered awards overlapping input filters.

--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -27,6 +27,7 @@
       // Seems to be necessary for IE to replicate pointer-events.
       // TODO: Check during browser testing
       background: none !important;
+      z-index: 1;
 
       > .input-filters {
         margin-top: -$gutter;
