--- a/source/stylesheets/modules/_awards.scss
+++ b/source/stylesheets/modules/_awards.scss
@@ -27,6 +27,7 @@
 
       &:hover {
         @include transform(scale(1.05));
+        transform-style: flat;
         box-shadow: 0px 6px 10px $box-shadow-color;
         background: lighten($box-background, 0.5%);
         outline: 1px solid #CCC;
